# ojs-rust-sdk

./: .editorconfig  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: api-compat.yml  ci.yml  release-please.yml  release.yml
docs/testing/: TESTING_DOCUMENTATION_INDEX.md  TESTING_ROADMAP.md  TEST_COVERAGE_SUMMARY.txt  TEST_PATTERNS_GUIDE.txt  TEST_STRUCTURE_ANALYSIS.md
examples/: basic_enqueue.rs  middleware_example.rs  worker_processing.rs  workflow_chain.rs
src/: agent.rs  attest.rs  client.rs  config.rs  durable.rs  encryption.rs  error_codes.rs  errors.rs  events.rs  job.rs  lib.rs  middleware.rs  otel.rs  queue.rs  rate_limiter.rs  retry.rs  schema.rs  subscribe.rs  testing.rs  tracing_mw.rs  worker.rs  workflow.rs
src/middleware_common/: logging.rs  metrics.rs  mod.rs  timeout.rs
src/recorder/: mod.rs
src/serverless/: aws_lambda.rs  mod.rs
src/transport/: http.rs  mod.rs
tests/: benchmark_test.rs  client_test.rs  error_test.rs  events_test.rs  http_test.rs  integration_test.rs  job_test.rs  middleware_test.rs  proptest_test.rs  queue_test.rs  rate_limiter_test.rs  retry_test.rs  schema_test.rs  testing_test.rs  worker_advanced_test.rs  worker_integration_test.rs  worker_test.rs  workflow_test.rs
