[package]
name = "ojs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Official OJS (Open Job Spec) SDK for Rust"
license = "Apache-2.0"
repository = "https://github.com/openjobspec/ojs-rust-sdk"
keywords = ["jobs", "queue", "background", "worker", "ojs"]
categories = ["asynchronous", "web-programming"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "signal"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
percent-encoding = "2"
opentelemetry = { version = "0.28", optional = true }
lambda_runtime = { version = "0.13", optional = true }
aws_lambda_events = { version = "0.15", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
serde_json = "1"
proptest = "1"

[features]
default = ["reqwest-transport"]
reqwest-transport = ["dep:reqwest"]
testing = []
tracing-middleware = []
common-middleware = []
otel-middleware = ["dep:opentelemetry"]
serverless-lambda = ["dep:lambda_runtime", "dep:aws_lambda_events"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
